bug 298034: Add keywords for Workbench Wizards

--- a/bundles/org.eclipse.team.cvs.ui/plugin.properties
+++ b/bundles/org.eclipse.team.cvs.ui/plugin.properties
@@ -260,6 +260,7 @@ PreferenceKeywords.Decorator=cvs team label decorations text icons flag
 PreferenceKeywords.Compare=cvs team compare synchronize model change set
 PreferenceKeywords.Update=cvs team update merge conflict
 PreferenceKeywords.Watch=cvs team watch editors notification
+PreferenceKeywords.Import=repository
 
 RepoPreference.Name=CVS Repositories
 RepoPreference.Description=Preferences that contain the CVS repository connection information
