Bug 295524 Need to devise a strategy for merging user changes to the UI with the application's UI definition

--- a/examples/org.eclipse.e4.demo.contacts/plugin.xml
+++ b/examples/org.eclipse.e4.demo.contacts/plugin.xml
@@ -28,7 +28,7 @@
          </property>
          <property
                name="applicationXMI"
-               value="org.eclipse.e4.demo.contacts/Application.xmi">
+               value="org.eclipse.e4.demo.contacts/Application.e4xmi">
          </property>
          <property
                name="applicationCSS"
