bug 73683: [Apply Patch] Add URL option Apply Patch dialog

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/patch/PatchMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/patch/PatchMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -31,11 +31,14 @@ PatcherCompareEditorInput_NotIncluded=(Not included)
 # InputPatchPage
 #
 InputPatchPage_title= Patch Input Specification
+InputPatchPage_NoURL=Please enter an URL
 InputPatchPage_message= Select the patch location.
 InputPatchPage_Clipboard=Clipboard
 InputPatchPage_SelectInput=Apply the patch to the &selected file, folder or project:
+InputPatchPage_MalformedURL=Malformed URL
 InputPatchPage_PatchErrorDialog_title=Patch Error
 InputPatchPage_FileButton_text=Fil&e
+InputPatchPage_URLButton_text=&URL
 InputPatchPage_ChooseFileButton_text=&Browse...
 InputPatchPage_UseClipboardButton_text=&Clipboard
 InputPatchPage_UseWorkspaceButton_text=&Workspace
@@ -53,9 +56,12 @@ InputPatchPage_PatchFileNotFound_message=Patch file not found.
 InputPatchPage_ParseError_message=Error while parsing patch
 InputPatchPage_Clipboard_title=Clipboard
 InputPatchPage_PatchFile_title=Patch file
+InputPatchPage_URL_title=URL
 InputPatchPage_WorkspacePatch_title=Workspace file
 InputPatchPage_NoDiffsFound_format={0} does not contain valid patch.
 InputPatchPage_SingleFileError_format={0} contains multiple patches. You cannot apply them to a single file.
+InputPatchPage_URLConnecting=Opening connection to the URL
+InputPatchPage_URLFetchingContent=Fetching content from the URL
 #
 # PatchTargetPage
 #
