Bug 295524 Need to devise a strategy for merging user changes to the UI with the application's UI definition

--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -69,7 +69,7 @@
          point="org.eclipse.e4.workbench.model">
       <model
             parentID="E4MainWindow"
-            location="xmi/photoDemo.xmi">
+            location="Application.e4xmi">
       </model>
    </extension>
 
