Bug 296739 Evolution of the org.eclipse.ui.* extension points

--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -68,7 +68,7 @@
          name="Photo Demo"
          point="org.eclipse.e4.workbench.model">
       <snippet
-            uri="xmi/components.xmi">
+            uri="xmi/components.e4xmi">
       </snippet>
    </extension>
 
