--- a/org.eclipse.ua.tests/plugin.xml
+++ b/org.eclipse.ua.tests/plugin.xml
@@ -610,6 +610,13 @@
             name="Lucene Search Participant Test"
             participant="org.eclipse.ua.tests.help.search.MockLuceneParticipant">
       </searchParticipant>
+      <searchParticipant
+            headless="false"
+            icon="icons/sample4.gif"
+            id="org.eclipse.ua.tests.xmlLuceneParticipant"
+            name="XML Lucene Participant"
+            participant="org.eclipse.ua.tests.help.search.MockLuceneXMLParticipant">
+      </searchParticipant>
    </extension>
 
 </plugin>
