Group labels were not added to search index

--- a/org.eclipse.ua.tests/plugin.xml
+++ b/org.eclipse.ua.tests/plugin.xml
@@ -389,6 +389,9 @@
             content="data/intro/anchors/extn6.xml"
             configId="org.eclipse.ua.tests.intro.config.anchors">
       </configExtension>
+      <configExtension
+            configId="org.eclipse.ui.intro.universalConfig"
+            content="data/intro/search/samplesExtensionContent.xml"/>  
       
       <!-- 3.2 welcome content used for open welcome performance test -->
       <!-- filtered unless running test -->
@@ -616,6 +619,23 @@
             id="org.eclipse.ua.tests.xmlLuceneParticipant"
             name="XML Lucene Participant"
             participant="org.eclipse.ua.tests.help.search.MockLuceneXMLParticipant">
+      </searchParticipant>
+   </extension>
+   <extension
+         point="org.eclipse.help.base.searchParticipant">
+      <searchParticipant
+            headless="false"
+            icon="icons/sample4.gif"
+            id="org.eclipse.ua.tests.searchParticipant"
+            name="Mock Search Participant"
+            participant="org.eclipse.ua.tests.help.search.MockSearchParticipant">
+      </searchParticipant>
+      <searchParticipant
+            headless="false"
+            icon="icons/sample4.gif"
+            id="org.eclipse.ua.tests.searchParticipantXml"
+            name="Mock Search Participant for XML"
+            participant="org.eclipse.ua.tests.help.search.MockSearchParticipantXML">
       </searchParticipant>
    </extension>
 
