--- a/org.eclipse.help.base/plugin.xml
+++ b/org.eclipse.help.base/plugin.xml
@@ -18,6 +18,7 @@
    <extension-point id="activitySupport" name="%activity_extension_point_name" schema="schema/activitySupport.exsd"/>
    <extension-point id="luceneSearchParticipants" name="%search_participant_extension_point_name" schema="schema/luceneSearchParticipants.exsd"/>
    <extension-point id="server" name="%server_extension_point_name" schema="schema/server.exsd"/>
+   <extension-point id="searchParticipant" name="Help Search Participant" schema="schema/searchParticipant.exsd"/>
 
 <!-- Stand-alone infocenter application -->
    <extension
