--- a/org.eclipse.ui.intro/plugin.xml
+++ b/org.eclipse.ui.intro/plugin.xml
@@ -36,7 +36,7 @@
       </standbyContentPart> 
    </extension>
    <extension
-         point="org.eclipse.help.base.luceneSearchParticipants">
+         point="org.eclipse.help.base.searchParticipant">
       <searchParticipant
             icon="$nl$/icons/welcome16.gif"
             id="org.eclipse.ui.intro"
