--- a/org.eclipse.ui.cheatsheets/plugin.xml
+++ b/org.eclipse.ui.cheatsheets/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?><!--
-     Copyright (c) 2005, 2008 IBM Corporation and others.
+     Copyright (c) 2005, 2010 IBM Corporation and others.
      All rights reserved. This program and the accompanying materials
      are made available under the terms of the Eclipse Public License v1.0
      which accompanies this distribution, and is available at
@@ -206,7 +206,7 @@
       </triggerPoint>
     </extension>
    <extension
-         point="org.eclipse.help.base.luceneSearchParticipants">
+         point="org.eclipse.help.base.searchParticipant">
       <searchParticipant
             icon="$nl$/icons/view16/cheatsheet_view.gif"
             id="org.eclipse.ui.cheatsheets"
