--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -441,7 +441,7 @@
 	     <enablement>
             <instanceof value="org.eclipse.core.resources.IResource"/>
          </enablement>            
-		<override suppressedExtensionId="org.eclipse.ui.navigator.ResourceContent"/>
+		<override suppressedExtensionId="org.eclipse.ui.navigator.resourceContent"/>
 
       </navigatorContent>
 
@@ -602,6 +602,22 @@
             activeByDefault="false"
             priority="normal">
          <override suppressedExtensionId="org.eclipse.ui.tests.navigator.testTrackingLabel.C"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentPipelined" 
+            name="Test Pipelined Content Provider"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestContentProviderPipelined"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderPlainRed"
+            activeByDefault="false"
+            priority="normal">
+  		  <override 
+    		  suppressedExtensionId="org.eclipse.ui.navigator.resourceContent"/>
          <enablement>
             <instanceof
                   value="org.eclipse.core.resources.IResource">
