--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -43,7 +43,13 @@
             id="org.eclipse.ui.tests.navigator.NonCommonViewerTestView"
             allowMultiple="false"
             class="org.eclipse.ui.tests.navigator.NonCommonViewerView"
-            name="Non CommonViewer Test View"/>            
+            name="Non CommonViewer Test View"/>
+            
+	   <view
+            id="org.eclipse.ui.tests.navigator.M12View"
+            allowMultiple="false"
+            class="org.eclipse.ui.navigator.resources.ProjectExplorer"
+            name="Project Explorer M12 Abstract Model content test"/>
 
    </extension>
 
@@ -139,7 +145,9 @@
       </viewer>
 
 	  <!-- don't make the name match the View we want to make sure that works -->
-      <viewer viewerId="org.eclipse.ui.tests.navigator.NonCommonViewerTestViewer"/>      
+      <viewer viewerId="org.eclipse.ui.tests.navigator.NonCommonViewerTestViewer"/>  
+      
+      <viewer viewerId="org.eclipse.ui.tests.navigator.M12View"/>
 
    </extension>
 
@@ -505,6 +513,91 @@
 
       </navigatorContent>
       
+	  <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.eclipse.ui.tests.navigator.m12.M1ContentProvider"
+            id="org.eclipse.ui.tests.navigator.m12.M1"
+            labelProvider="org.eclipse.ui.tests.navigator.m12.ResourceWrapperLabelProvider"
+            name="M1 model provider"
+            providesSaveables="false">
+          <override
+              policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+               suppressedExtensionId="org.eclipse.ui.navigator.resourceContent">
+         </override>
+         <triggerPoints>
+         <or>
+            <instanceof
+                  value="org.eclipse.core.resources.IWorkspaceRoot">
+            </instanceof>
+           </or>
+         </triggerPoints>
+         <possibleChildren>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
+ 
+	   <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.eclipse.ui.tests.navigator.m12.M1ContentProvider"
+            id="org.eclipse.ui.tests.navigator.m12.M1FirstClass"
+            labelProvider="org.eclipse.ui.tests.navigator.m12.ResourceWrapperLabelProvider"
+            name="M1 model provider"
+            providesSaveables="false">
+         <override
+               policy="InvokeAlwaysRegardlessOfSuppressedExt"
+              suppressedExtensionId="org.eclipse.ui.navigator.resourceContent">
+         </override>
+         <triggerPoints>
+         <or>
+            <instanceof
+                  value="org.eclipse.core.resources.IWorkspaceRoot">
+            </instanceof>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Project">
+            </instanceof>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Folder">
+            </instanceof>
+           </or>
+         </triggerPoints>
+         <possibleChildren>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
+ 
+-
+      <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.eclipse.ui.tests.navigator.m12.M2ContentProvider"
+            id="org.eclipse.ui.tests.navigator.m12.M2"
+            labelProvider="org.eclipse.ui.tests.navigator.m12.ResourceWrapperLabelProvider"
+            name="M2 model provider"
+            providesSaveables="false">
+         <override
+               policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+               suppressedExtensionId="org.eclipse.ui.tests.navigator.m12.M1">
+         </override>
+         <triggerPoints>
+         <or>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Folder">
+            </instanceof>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Project">
+            </instanceof>
+         </or>
+         </triggerPoints>
+         <possibleChildren>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M2Resource">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
+    
       <navigatorContent 
             id="org.eclipse.ui.tests.navigator.testTrackingLabel.A" 
             name="Test Label Overrides A"
