Bug 295606  [Help] Terminology on Help -> Content preference page may need to change

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -124,7 +124,7 @@ potentialCauses=This condition may be caused by one of the following:
 serversCouldBeDown=The remote server(s) could be down.
 networkCouldBeDown=Your machine may have lost network connectivity.
 mayNeedProxy=You may need to configure proxy settings to access a remote server.
-remotePreferences=To view, edit, and test Network Infocenter settings, open {0}.
+remotePreferences=To view, edit, and test network information center settings, open {0}.
 remotePreferencesMenuSelect=Window &gt Preferences &gt Help &gt Content
 
 # Frame Titles 
