--- a/org.eclipse.help.ui/plugin.properties
+++ b/org.eclipse.help.ui/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -30,8 +30,8 @@ HelpViewName = Help
 LocalHelp.label = Local Help
 LocalHelp.desc = Searches local help documents
 
-InfoCenter.label = Info Center
-InfoCenter.desc = Searches a remote Info Center
+InfoCenter.label = Information Center
+InfoCenter.desc = Searches a remote information center
 
 WebSearch.label = Web Search
 WebSearch.desc = Performs a general-purpose Web search
