--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -39,11 +39,23 @@
             class="org.eclipse.ui.navigator.CommonNavigator"
             name="Inherited Test View"/>            
 
+	  <view
+            id="org.eclipse.ui.tests.navigator.PipelineTestView"
+            allowMultiple="false"
+            class="org.eclipse.ui.navigator.CommonNavigator"
+            name="Inherited Test View"/>
+
       <view
             id="org.eclipse.ui.tests.navigator.NonCommonViewerTestView"
             allowMultiple="false"
             class="org.eclipse.ui.tests.navigator.NonCommonViewerView"
-            name="Non CommonViewer Test View"/>            
+            name="Non CommonViewer Test View"/>
+            
+	   <view
+            id="org.eclipse.ui.tests.navigator.M12View"
+            allowMultiple="false"
+            class="org.eclipse.ui.navigator.resources.ProjectExplorer"
+            name="Project Explorer M12 Abstract Model content test"/>
 
    </extension>
 
@@ -138,8 +150,12 @@
             helpContext="org.eclipse.ui.tests.navigator.testHelpContext">
       </viewer>
 
+	  <viewer viewerId="org.eclipse.ui.tests.navigator.InheritedTestView"/>
+
 	  <!-- don't make the name match the View we want to make sure that works -->
-      <viewer viewerId="org.eclipse.ui.tests.navigator.NonCommonViewerTestViewer"/>      
+      <viewer viewerId="org.eclipse.ui.tests.navigator.NonCommonViewerTestViewer"/>  
+      
+      <viewer viewerId="org.eclipse.ui.tests.navigator.M12View"/>
 
    </extension>
 
@@ -269,7 +285,7 @@
             id="org.eclipse.ui.tests.navigator.testContentOverridden1" 
             name="Test Content Overridden 1 (Red)"
             contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
-            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderRed"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderStyledRed"
             priority="lower">
          <triggerPoints>
             <instanceof
@@ -282,7 +298,7 @@
             id="org.eclipse.ui.tests.navigator.testContentOverride1" 
             name="Test Content Override 1 (Label only - Green)"
             contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
-            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderGreen"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderStyledGreen"
             priority="lower">
          <triggerPoints>
             <instanceof
@@ -290,6 +306,33 @@
             </instanceof>
          </triggerPoints>
 		<override suppressedExtensionId="org.eclipse.ui.tests.navigator.testContentOverridden1"/>
+	  </navigatorContent>      
+
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentOverridden1Plain" 
+            name="Test Content Overridden 1 (Red)"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderPlainRed"
+            priority="lower">
+         <triggerPoints>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </triggerPoints>
+	  </navigatorContent>   
+	     
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentOverride1Plain" 
+            name="Test Content Override 1 (Label only - Green)"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderPlainGreen"
+            priority="lower">
+         <triggerPoints>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </triggerPoints>
+		<override suppressedExtensionId="org.eclipse.ui.tests.navigator.testContentOverridden1Plain"/>
 	  </navigatorContent>      
 
       <navigatorContent 
@@ -414,9 +457,136 @@
 	     <enablement>
             <instanceof value="org.eclipse.core.resources.IResource"/>
          </enablement>            
-		<override suppressedExtensionId="org.eclipse.ui.navigator.ResourceContent"/>
+		<override suppressedExtensionId="org.eclipse.ui.navigator.resourceContent"/>
 
       </navigatorContent>
+      
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.A" 
+            name="Test Pipeline Overrides A"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestPipelineProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="normal">
+         <override
+               policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+               suppressedExtensionId="org.eclipse.ui.navigator.resourceContent"/>
+         <triggerPoints>
+            <adapt type="org.eclipse.core.resources.IWorkspaceRoot"/>
+         </triggerPoints>
+         <possibleChildren>
+         	<instanceof value="org.eclipse.ui.tests.navigator.m12.model.M1Resource"/>
+         </possibleChildren>
+	  </navigatorContent>
+	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.B" 
+            name="Test Pipeline Overrides B"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestPipelineProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="normal">
+         <override                
+         	policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+         	suppressedExtensionId="org.eclipse.ui.tests.navigator.testPipeline.A"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.C" 
+            name="Test Pipeline Overrides C"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestPipelineProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="low">
+         <override
+         	policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+         	suppressedExtensionId="org.eclipse.ui.tests.navigator.testPipeline.A"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.D" 
+            name="Test Pipeline Overrides D"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestPipelineProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="low">
+         <override 
+         	policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+         	suppressedExtensionId="org.eclipse.ui.tests.navigator.testPipeline.B"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.E" 
+            name="Test Pipeline Overrides E"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestPipelineProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="low">
+         <override
+         	policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+         	suppressedExtensionId="org.eclipse.ui.tests.navigator.testPipeline.D"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.F" 
+            name="Test Pipeline Overrides F"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestPipelineProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="high">
+         <override
+         	policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+         	suppressedExtensionId="org.eclipse.ui.tests.navigator.testPipeline.C"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.G" 
+            name="Test Pipeline Overrides G"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestPipelineProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="normal">
+         <override
+         	policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+         	suppressedExtensionId="org.eclipse.ui.tests.navigator.testPipeline.C"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+      
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testPipeline.label" 
+            name="Test Pipeline Label Provider"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestEmptyContentProvider"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            priority="normal">
+         <override suppressedExtensionId="org.eclipse.ui.tests.navigator.testPipeline.A"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
 
       <navigatorContent
             id="org.eclipse.ui.tests.navigator.testContentSorterResource.override"
@@ -478,6 +648,91 @@
 
       </navigatorContent>
       
+	  <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.eclipse.ui.tests.navigator.m12.M1ContentProvider"
+            id="org.eclipse.ui.tests.navigator.m12.M1"
+            labelProvider="org.eclipse.ui.tests.navigator.m12.ResourceWrapperLabelProvider"
+            name="M1 model provider"
+            providesSaveables="false">
+          <override
+              policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+               suppressedExtensionId="org.eclipse.ui.navigator.resourceContent">
+         </override>
+         <triggerPoints>
+         <or>
+            <instanceof
+                  value="org.eclipse.core.resources.IWorkspaceRoot">
+            </instanceof>
+           </or>
+         </triggerPoints>
+         <possibleChildren>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
+ 
+	   <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.eclipse.ui.tests.navigator.m12.M1ContentProvider"
+            id="org.eclipse.ui.tests.navigator.m12.M1FirstClass"
+            labelProvider="org.eclipse.ui.tests.navigator.m12.ResourceWrapperLabelProvider"
+            name="M1 model provider"
+            providesSaveables="false">
+         <override
+               policy="InvokeAlwaysRegardlessOfSuppressedExt"
+              suppressedExtensionId="org.eclipse.ui.navigator.resourceContent">
+         </override>
+         <triggerPoints>
+         <or>
+            <instanceof
+                  value="org.eclipse.core.resources.IWorkspaceRoot">
+            </instanceof>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Project">
+            </instanceof>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Folder">
+            </instanceof>
+           </or>
+         </triggerPoints>
+         <possibleChildren>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Resource">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
+ 
+-
+      <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.eclipse.ui.tests.navigator.m12.M2ContentProvider"
+            id="org.eclipse.ui.tests.navigator.m12.M2"
+            labelProvider="org.eclipse.ui.tests.navigator.m12.ResourceWrapperLabelProvider"
+            name="M2 model provider"
+            providesSaveables="false">
+         <override
+               policy="InvokeOnlyIfSuppressedExtAlsoVisibleAndActive"
+               suppressedExtensionId="org.eclipse.ui.tests.navigator.m12.M1">
+         </override>
+         <triggerPoints>
+         <or>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Folder">
+            </instanceof>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M1Project">
+            </instanceof>
+         </or>
+         </triggerPoints>
+         <possibleChildren>
+            <instanceof
+                  value="org.eclipse.ui.tests.navigator.m12.model.M2Resource">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
+    
       <navigatorContent 
             id="org.eclipse.ui.tests.navigator.testTrackingLabel.A" 
             name="Test Label Overrides A"
@@ -582,6 +837,46 @@
          </enablement>
 	  </navigatorContent>
 	  
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentResourceOverride" 
+            name="Test Resource Override Content Provider"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestContentProviderPipelined"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderPlainRed"
+            activeByDefault="false"
+            priority="normal">
+  		  <override 
+    		  suppressedExtensionId="org.eclipse.ui.navigator.resourceContent"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+
+
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentWith" 
+            name="Test Content With (Blue)"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderBlue"
+            priority="lower">
+  		  <override 
+    		  suppressedExtensionId="org.eclipse.ui.navigator.resourceContent"/>
+         <triggerPoints>
+		    <and>         
+            	<instanceof
+                  value="org.eclipse.core.resources.IResource">
+            	</instanceof>
+   				<with
+   					variable="activeWorkbenchWindow.activePerspective">
+   					<not><equals
+      					value="com.myperpective">
+   					</equals></not>
+   				</with>
+            </and>
+         </triggerPoints>
+	  </navigatorContent>      
+
 	<!-- CDT -->
     <navigatorContent
           contentProvider="org.eclipse.ui.tests.navigator.cdt.CNavigatorContentProvider"
