Bug 295122: java.lang.IllegalArgumentException: Illegal pattern character 'j'

--- a/org.eclipse.ltk.ui.refactoring/src/org/eclipse/ltk/internal/ui/refactoring/RefactoringUIMessages.properties
+++ b/org.eclipse.ltk.ui.refactoring/src/org/eclipse/ltk/internal/ui/refactoring/RefactoringUIMessages.properties
@@ -103,18 +103,15 @@ RefactoringHistoryWizard_preparing_refactorings=Preparing refactorings...
 RefactoringHistoryWizard_one_refactoring_undone=There is one refactoring which has been performed.
 RefactoringHistoryWizard_undo_message_explanation=\n\nCanceling this wizard will undo all refactorings to prevent your workspace from being in an inconsistent state.
 
-## These keys are used to render day names of refactoring histories in the corresponding language (ISO-639)
-## The country, language and variant codes need to be changed to match the final local of the translated property file
-RefactoringHistoryLabelProvider_label_country=US
-RefactoringHistoryLabelProvider_label_language=en
+## These properties are date format patterns for the en_US locale, as defined in DateFormatSymbols.
+## Do *not* localize the characters. If necessary, you can change the repetition count or the order of tokens.
 RefactoringHistoryLabelProvider_this_week_format=w
 RefactoringHistoryLabelProvider_last_week_format=w
-RefactoringHistoryLabelProvider_this_month_format=MMMMM yyyy
-RefactoringHistoryLabelProvider_last_month_format=MMMMM yyyy
-RefactoringHistoryLabelProvider_label_variant=
+RefactoringHistoryLabelProvider_this_month_format2=MMMM yyyy
+RefactoringHistoryLabelProvider_last_month_format2=MMMM yyyy
 RefactoringHistoryLabelProvider_week_format=w
 RefactoringHistoryLabelProvider_year_format=yyyy
-RefactoringHistoryLabelProvider_month_format=MMMMM
+RefactoringHistoryLabelProvider_month_format2=MMMM
 RefactoringHistoryLabelProvider_day_format=EEEE
 ## end
 
