--- a/bundles/org.eclipse.e4.ui.workbench/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.workbench/plugin.xml
@@ -2,10 +2,9 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension-point id="org.eclipse.e4.workbench.contributions" name="UI Contributions" schema="schema/org.eclipse.e4.workbench.contribution.exsd"/>
-   <extension-point id="org.eclipse.e4.workbench.legacy" name="3.X legacy hook" schema="schema/org.eclipse.e4.workbench.legacy.exsd"/>
    <extension-point id="org.eclipse.e4.workbench.parts" name="e4 parts" schema="schema/org.eclipse.e4.workbench.parts.exsd"/>
    <extension-point id="org.eclipse.e4.workbench.model" name="Model extensions" schema="schema/org.eclipse.e4.workbench.model.exsd"/>
-   <extension-point id="org.eclipse.e4.workbench.rendererfactory" name="UI Renderer Factory" schema="schema/org.eclipse.e4.workbench.rendererFactory.exsd"/>
+   <extension-point id="org.eclipse.e4.workbench.rendererfactory" name="UI Renderer Factory" schema="schema/org.eclipse.e4.workbench.rendererfactory.exsd"/>
    <extension
          point="org.eclipse.core.runtime.adapters">
       <factory
