Bug 193361 [EditorMgmt] Unexpected behaviour opening sample XML editor

--- a/tests/org.eclipse.ui.tests/data/org.eclipse.newEditor1/plugin.xml
+++ b/tests/org.eclipse.ui.tests/data/org.eclipse.newEditor1/plugin.xml
@@ -17,6 +17,7 @@
          id="testDynamicEditorAddition"
          point="org.eclipse.ui.editors">
       <editor
+            extensions="xml"
             icon="anything.gif"
             class="org.eclipse.ui.dynamic.DynamicEditor"
             default="false"
