--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -648,6 +648,21 @@
 
       </navigatorContent>
       
+	  <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testContentNoChildren" 
+            name="Test Content No Children"
+            contentProvider="org.eclipse.ui.tests.navigator.extension.TestContentProviderNoChildren"
+            labelProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionLabelProvider"
+            activeByDefault="false"
+            priority="normal">
+  		 <override suppressedExtensionId="org.eclipse.ui.navigator.resourceContent"/>
+         <enablement>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>
+	  
 	  <navigatorContent
             activeByDefault="true"
             contentProvider="org.eclipse.ui.tests.navigator.m12.M1ContentProvider"
