Bug 299727 - [Designer] Integrate the e4 Workbench EMF editor in outline view

--- a/bundles/org.eclipse.e4.ui.model.workbench.edit/plugin.properties
+++ b/bundles/org.eclipse.e4.ui.model.workbench.edit/plugin.properties
@@ -7,8 +7,8 @@
 # Contributors:
 #      IBM Corporation - initial API and implementation
 
-pluginName = UIElements Edit Support
-providerName = www.example.org
+pluginName = UIElements Edit (Incubation)
+providerName = Eclipse.org
 
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
