Bug 235646 - [Expressions View] Add support for columns in the expressions view.

--- a/org.eclipse.debug.ui/plugin.xml
+++ b/org.eclipse.debug.ui/plugin.xml
@@ -2417,6 +2417,13 @@ M4 = Platform-specific fourth key
             </adapter>
          </factory>
          <factory
+               adaptableType="org.eclipse.debug.core.model.IWatchExpression"
+               class="org.eclipse.debug.internal.ui.views.launch.DebugElementAdapterFactory">
+            <adapter
+                  type="org.eclipse.debug.internal.ui.viewers.model.provisional.IElementEditor">
+            </adapter>
+         </factory>
+         <factory
                adaptableType="org.eclipse.debug.core.IExpressionManager"
                class="org.eclipse.debug.internal.ui.views.launch.DebugElementAdapterFactory">
             <adapter
@@ -2427,6 +2434,9 @@ M4 = Platform-specific fourth key
             </adapter>
             <adapter
                   type="org.eclipse.debug.internal.ui.viewers.model.provisional.IElementMementoProvider">
+            </adapter>
+            <adapter
+                  type="org.eclipse.debug.internal.ui.viewers.model.provisional.IColumnPresentationFactory">
             </adapter>
          </factory>
          <factory
