--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-#  Copyright (c) 2000, 2009 IBM Corporation and others.
+#  Copyright (c) 2000, 2010 IBM Corporation and others.
 #  All rights reserved. This program and the accompanying materials
 #  are made available under the terms of the Eclipse Public License v1.0
 #  which accompanies this distribution, and is available at
@@ -236,3 +236,8 @@ WorkingDirectoryBlock_19=Ot&her:
 WorkingDirectoryBlock_20=Working directory not specified
 WorkingDirectoryBlock_1=&File System...
 WorkingDirectoryBlock_Exception_occurred_reading_configuration___15=Exception occurred reading configuration:
+
+##############################################################
+# Elements
+##############################################################
+ExpressionManagerContentProvider_1=Add new expression
