Bug 201301 - [Workbench] Users should be able to find out who contributed a view/editor/toolbar item/job/preference page/...

--- a/bundles/org.eclipse.ui.ide.application/plugin.xml
+++ b/bundles/org.eclipse.ui.ide.application/plugin.xml
@@ -106,4 +106,28 @@
          </menu>
       </menuContribution>
    </extension>
+   <extension
+	         point="org.eclipse.ui.decorators">
+	      <decorator
+	            adaptable="true"
+	            class="org.eclipse.ui.internal.decorators.ContributingPluginDecorator"
+	            id="org.eclipse.ui.decorators.ContributingPluginDecorator"
+	            label="%ShowContributingPluginDecorator.label"
+	            lightweight="false"
+	            state="false">
+	         <enablement>
+	            <or>
+	               <objectClass
+	                     name="org.eclipse.core.runtime.jobs.Job">
+	               </objectClass>
+	               <objectClass
+	                     name="org.eclipse.ui.IWorkbenchPart">
+	               </objectClass>
+	            </or>
+	         </enablement>
+          <description>
+             %ShowContributingPluginDecorator.description
+          </description>
+	      </decorator>
+	   </extension>
 </plugin>
