Bug 298835 - Merge e4 Project Path Variable back into the 3.6 stream

--- a/bundles/org.eclipse.core.resources/plugin.properties
+++ b/bundles/org.eclipse.core.resources/plugin.properties
@@ -22,6 +22,7 @@ modelProviders=Model Providers
 filterMatchers=Filter Matchers
 preferencesExtPtName=Resource Preferences
 resourceModelName=File System Resources
+variableProviders=Variable Providers
 
 markerName = Marker
 problemName = Problem
